[package]
name = "nem"
version = "0.1.0"
authors = ["Kei NIKADO <nikado.kei@gmail.com>"]

[lib]
name = "nem"
path = "src/nem/lib.rs"

[dependencies]
hyper = "^0.12.1"
url = "^1.7.0"
restson = "^0.3.0"
serde = "^1.0"
serde_derive = "^1.0"
log = "0.4.0"
env_logger = "0.5.13"
clap = "2.32.0"
curl = "0.4.18"
reqwest = "0.9.2"
