[package]
name = "nem_mini"
version = "0.1.0"
authors = ["Kei NIKADO <nikado.kei@gmail.com>"]

[lib]
name = "nem_mini"
path = "src/nem_mini/lib.rs"

[dependencies]
url = "^1.7.0"
log = "0.4.0"
env_logger = "0.5.13"
clap = "2.32.0"
reqwest = "0.9.2"
json_pretty = "0.1.2"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
